--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -13,6 +13,7 @@
 
 input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
@@ -914,6 +915,51 @@ main{
                 }
             }
         }
+    }
+
+    .popup{
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        width: 500px;
+        height: 300px;
+        top: 50%;
+        left: 50%;
+        margin-top: -100px; /* Negative half of height. */
+        margin-left: -250px; /* Negative half of width. */
+        z-index: 1000;
+        border-radius: 8px;
+        box-shadow: 0 0 16px rgba(0,0,0,0.5);
+        text-align: center;
+        justify-content: center;
+
+        background-color: red;
+
+        @media (max-width: 767px){
+            width: 50%;
+            height: 50%;
+            margin-top: -25%;
+            margin-left: -25%;
+        }
+
+        img{
+            width: 100px;
+            height: 100px;
+            margin-bottom: 16px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        h3{
+            margin-bottom: 16px;
+        }
+        
+        .button{
+            margin-top: 16px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
     }
 
 }
